ersetze als deprecated markierten Konstruktor von Integer(int)