@@ -99,7 +99,7 @@ public abstract class AbstractSammelTransferImpl extends AbstractHibiscusDBObjec
   public void insert() throws RemoteException, ApplicationException
   {
     if (getAttribute("ausgefuehrt") == null) // Status noch nicht definiert
-      setAttribute("ausgefuehrt",new Integer(0));
+      setAttribute("ausgefuehrt", Integer.valueOf(0));
     super.insert();
   }
 
@@ -168,7 +168,7 @@ public abstract class AbstractSammelTransferImpl extends AbstractHibiscusDBObjec
     try
     {
       whileStore = true;
-      setAttribute("ausgefuehrt",new Integer(b ? 1 : 0));
+      setAttribute("ausgefuehrt", Integer.valueOf(b ? 1 : 0));
       setAttribute("ausgefuehrt_am",new Date());
       store();
       Logger.info("[" + getTableName() + ":" + getID() + "] (" + BeanUtil.toString(this) + ") - executed: " + b);
@@ -285,12 +285,12 @@ public abstract class AbstractSammelTransferImpl extends AbstractHibiscusDBObjec
       try
       {
         DBIterator l = getBuchungen();
-        return new Integer(l.size());
+        return Integer.valueOf(l.size());
       }
       catch (RemoteException e)
       {
         Logger.error("unable to determine number of buchungen",e);
-        return new Integer(0);
+        return Integer.valueOf(0);
       }
     }
     if ("buchungen".equals(arg0))
@@ -369,6 +369,6 @@ public abstract class AbstractSammelTransferImpl extends AbstractHibiscusDBObjec
    */
   public void setWarning(boolean b) throws RemoteException
   {
-    setAttribute("warnungen",new Integer(b ? 1 : 0));
+    setAttribute("warnungen", Integer.valueOf(b ? 1 : 0));
   }
 }
