@@ -115,7 +115,7 @@ public class UeberweisungImpl extends AbstractBaseUeberweisungImpl implements Ue
    */
   public void setTerminUeberweisung(boolean termin) throws RemoteException
   {
-    setAttribute("banktermin",termin ? new Integer(1) : null);
+    setAttribute("banktermin",termin ? Integer.valueOf(1) : null);
   }
 
   /**
@@ -144,6 +144,6 @@ public class UeberweisungImpl extends AbstractBaseUeberweisungImpl implements Ue
    */
   public void setUmbuchung(boolean b) throws RemoteException
   {
-    setAttribute("umbuchung",b ? new Integer(1) : null);
+    setAttribute("umbuchung",b ? Integer.valueOf(1) : null);
   }
 }
