@@ -286,7 +286,7 @@ public class UmsatzImpl extends AbstractHibiscusDBObject implements Umsatz
    * @see de.willuhn.jameica.hbci.rmi.HibiscusTransfer#setKonto(de.willuhn.jameica.hbci.rmi.Konto)
    */
   public void setKonto(Konto k) throws RemoteException {
-    setAttribute("konto_id",(k == null || k.getID() == null) ? null : new Integer(k.getID()));
+    setAttribute("konto_id",(k == null || k.getID() == null) ? null : Integer.valueOf(k.getID()));
   }
 
   /**
@@ -476,7 +476,7 @@ public class UmsatzImpl extends AbstractHibiscusDBObject implements Umsatz
     {
       try
       {
-        return new Integer(getID());
+        return Integer.valueOf(getID());
       }
       catch (Exception e)
       {
@@ -666,7 +666,7 @@ public class UmsatzImpl extends AbstractHibiscusDBObject implements Umsatz
    */
   public void setUmsatzTyp(UmsatzTyp ut) throws RemoteException
   {
-    setAttribute("umsatztyp_id",ut == null ? null : new Integer(ut.getID()));
+    setAttribute("umsatztyp_id",ut == null ? null : Integer.valueOf(ut.getID()));
   }
 
   /**
@@ -730,7 +730,7 @@ public class UmsatzImpl extends AbstractHibiscusDBObject implements Umsatz
     if (flags < 0)
       return; // ungueltig
     
-    this.setAttribute("flags",new Integer(flags));
+    this.setAttribute("flags", Integer.valueOf(flags));
   }
 
   /**
